--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
                     <li class="nav-list-item">
                         <a class="nav-list-link link" href="./">Студия</a>
                     </li>
-                    <li class="nav-list-item">
-                        <a class="nav-list-link link" href="portfolio.html">Портфолио</a>
+                    <li class="nav-list-item nav-list-item-color">
+                        <a class="nav-list-link active-page link" href="portfolio.html">Портфолио</a>
                     </li>
                     <li class="nav-list-item">
                         <a class="nav-list-link link" href="">Контакты</a>
@@ -80,61 +80,99 @@
 
     <!--Проекты-->
     <div class="container">
-            <h1 hidden >Проекты</h1>
+            <h1  hidden>Проекты</h1>
             <ul class="portfolio list">
             <li class="portfolio-img">
-                <a href="" class="img-link link"><img class="img-project"  src="./images/images-portfolio/photo1.jpg" alt="" width="370" height="294">
-                <h2 class="projects">Технокряк</h2>
-                <p class="our-projects">Веб-сайт</p>
-                <p hidden class="our-projects-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
+                <a href="" class="img-link link">
+                        <div class="overlay">
+                            <img class="img-project"  src="./images/images-portfolio/photo1.jpg" alt="" width="370" height="294">
+                            <p  class="our-projects-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>  
+                        <h2 class="projects">Технокряк</h2>
+                        <p class="our-projects">Веб-сайт</p>
+                </a>
             </li>
+
             <li class="portfolio-img">
-                <a href="" class="img-link link"><img class="img-project" src="./images/images-portfolio/photo2.jpg" alt="" width="370" height="294">
+                <a href="" class="img-link link">
+                    <div class="overlay">
+                        <img class="img-project" src="./images/images-portfolio/photo2.jpg" alt="" width="370" height="294">
+                        <p  class="our-projects-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                 <h2 class="projects">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                 <p class="our-projects">Дизайн</p>
-                <p hidden class="our-projects-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
+                </a>
             </li>
+
             <li class="portfolio-img">
-                <a href="" class="img-link link"><img  class="img-project" src="./images/images-portfolio/photo3.jpg" alt="" width="370" height="294">
+                <a href="" class="img-link link">
+                    <div class="overlay">
+                        <img  class="img-project" src="./images/images-portfolio/photo3.jpg" alt="" width="370" height="294">
+                        <p  class="our-projects-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                 <h2 class="projects">Ресторан <span lang="en">Seafood</span></h2>
                 <p class="our-projects">Приложение</p>
-                <p hidden class="our-projects-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
+                </a>
             </li>
             <li class="portfolio-img">
-                <a href="" class="img-link link"><img class="img-project"  src="./images/images-portfolio/photo4.jpg" alt="" width="370" height="294">
+                <a href="" class="img-link link">
+                    <div class="overlay">
+                        <img class="img-project"  src="./images/images-portfolio/photo4.jpg" alt="" width="370" height="294">
+                        <p  class="our-projects-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                 <h2 class="projects">Проект <span lang="en">Prime</span></h2>
                 <p class="our-projects">Маркетинг</p>
-                <p hidden class="our-projects-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
+                </a>
             </li>
             <li class="portfolio-img">
-                <a href="" class="img-link link"><img  class="img-project" src="./images/images-portfolio/photo5.jpg" alt="" width="370" height="294">
+                <a href="" class="img-link link">
+                    <div class="overlay">
+                        <img  class="img-project" src="./images/images-portfolio/photo5.jpg" alt="" width="370" height="294">
+                        <p  class="our-projects-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                 <h2 class="projects">Проект <span lang="en">Boxes</span></h2>
                 <p class="our-projects">Приложение</p>
-                <p hidden class="our-projects-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
+                </a>
             </li>
             <li class="portfolio-img">
-                <a href="" class="img-link link"><img  class="img-project" src="./images/images-portfolio/photo6.jpg" alt="" width="370" height="294">
+                <a href="" class="img-link link">
+                    <div class="overlay">
+                        <img  class="img-project" src="./images/images-portfolio/photo6.jpg" alt="" width="370" height="294">
+                        <p  class="our-projects-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                 <h2 class="projects" lang="en">Inspiration has no Borders</h2>
                 <p class="our-projects">Веб-сайт</p>
-                <p hidden class="our-projects-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
+                </a>
             </li>
             <li class="portfolio-img">
-                <a href="" class="img-link link"><img  class="img-project" src="./images/images-portfolio/photo7.jpg" alt="" width="370" height="294">
+                <a href="" class="img-link link">
+                    <div class="overlay">
+                        <img  class="img-project" src="./images/images-portfolio/photo7.jpg" alt="" width="370" height="294">
+                        <p  class="our-projects-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                 <h2 class="projects">Издание <span lang="en">Limited Edition</span></h2>
                 <p class="our-projects">Дизайн</p>
-                <p hidden class="our-projects-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
+                </a>
             </li>
             <li class="portfolio-img">
-                <a href="" class="img-link link"><img  class="img-project" src="./images/images-portfolio/photo8.jpg" alt="" width="370" height="294">
+                <a href="" class="img-link link">
+                    <div class="overlay">
+                        <img  class="img-project" src="./images/images-portfolio/photo8.jpg" alt="" width="370" height="294">
+                        <p  class="our-projects-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                 <h2 class="projects">Проект <span lang="en">LAB</span></h2>
                 <p class="our-projects">Маркетинг</p>
-                <p hidden class="our-projects-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
+                </a>
             </li>
             <li class="portfolio-img">
-                <a href="" class="img-link link"><img  class="img-project" src="./images/images-portfolio/photo9.jpg" alt="" width="370" height="294">
+                <a href="" class="img-link link">
+                    <div class="overlay">
+                        <img  class="img-project" src="./images/images-portfolio/photo9.jpg" alt="" width="370" height="294">
+                        <p  class="our-projects-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                 <h2 class="projects" lang="en">Growing Business</h2>
                 <p class="our-projects">Приложение</p>
-                <p hidden class="our-projects-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
+                </a>
             </li>
             </ul>
     </div>
