--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                     <img class="logo-img" src="./images/shapka/Web-Studio.svg" alt="логотип"></a>
                 
                 <ul  class="nav-menu list">
-                    <li class="nav-list-item">
-                        <a class="nav-list-link link" href="./">Студия</a>
+                    <li class="nav-list-item nav-list-item-color">
+                        <a class="nav-list-link active-page link" href="./">Студия</a>
                     </li>
                     <li class="nav-list-item">
                         <a class="nav-list-link link" href="portfolio.html">Портфолио</a>
@@ -122,21 +122,21 @@
             <h2 class="services">Чем мы занимаемся</h2>
             <ul class="services-list list">
                 <li class="servises-list-item">
-                    <a class="services-list-link" href=""><img src="./images/yslygi/img.jpg" alt="ноутбук" 
+                    <img src="./images/yslygi/img.jpg" alt="ноутбук" 
                     width="370"
-                    height="294"></a>
+                    height="294">
                     <p class="services-list-description">Десктопные приложения</p>
                 </li>
                 <li class="servises-list-item">
-                    <a href=""><img src="./images/yslygi/box.jpg" alt="смартфон"
+                    <img src="./images/yslygi/box.jpg" alt="смартфон"
                     width="370"
-                    height="294"></a>
+                    height="294">
                     <p class="services-list-description">Мобильные приложения</p>
                 </li>
                 <li class="servises-list-item">
-                    <a href=""><img src="./images/yslygi/img-1.jpg" alt="монитор"
+                    <img src="./images/yslygi/img-1.jpg" alt="монитор"
                         width="370"
-                        height="294"></a>
+                        height="294">
                     <p class="services-list-description">Дизайнерские решения</p>
                 </li>
             </ul>
@@ -293,42 +293,42 @@
             <ul class="regular-clients list">
                 <li class="regular-clients-title"> 
                     <a class="clients-link" href="">
-                        <svg width="44px" height="50px">
+                        <svg class="clients-link-svg" width="44px" height="50px">
                             <use href="./images/sprite/sprite.svg#icon-co-1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="regular-clients-title">
                   <a class="clients-link" href="">
-                    <svg width="40px" height="52px">
+                    <svg class="clients-link-svg" width="40px" height="52px">
                         <use href="./images/sprite/sprite.svg#icon-co-2"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="regular-clients-title">
                   <a class="clients-link" href="">
-                    <svg width="41px" height="43px">
+                    <svg class="clients-link-svg" width="41px" height="43px">
                         <use href="./images/sprite/sprite.svg#icon-co-3"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="regular-clients-title">
                   <a class="clients-link" href="">
-                    <svg width="80px" height="42px">
+                    <svg class="clients-link-svg" width="80px" height="42px">
                         <use href="./images/sprite/sprite.svg#icon-co-4"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="regular-clients-title">
                   <a class="clients-link" href="">
-                    <svg width="59px" height="47px">
+                    <svg class="clients-link-svg" width="59px" height="47px">
                         <use href="./images/sprite/sprite.svg#icon-co-5"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="regular-clients-title">
                   <a class="clients-link" href="">
-                    <svg width="88px" height="46px">
+                    <svg class="clients-link-svg" width="88px" height="46px">
                         <use href="./images/sprite/sprite.svg#icon-co-6"></use>
                     </svg>
                   </a>
